--- a/about.html
+++ b/about.html
@@ -21,5 +21,37 @@
       </nav>
     </header>
     <h1>about page</h1>
+    <div class="main">
+      <div class="img_div">
+        <img src="WhatsApp Image 2025-10-09 at 09.56.17_83cd7d71.jpg" alt="" />
+      </div>
+
+      <div class="text_div">
+        <h1>
+          Hi, I am <br />
+          Alhassan Alhajie Samura
+        </h1>
+        <p>
+          Nationality: Sierra Leonean<br />
+          Tribe: Limba <br />Address: 4 Hill Cott Road, Wash Car, Freetown,
+          Sierra Leone <br />
+          Alhassan Alhajie Samura is a highly motivated and disciplined student
+          pursuing a Bachelor of Technology (B-Tech) in Electrical and
+          Electronics Engineering at Milton Margai Technical University. He
+          demonstrates a strong passion for technological innovation,
+          problem-solving, and professional growth within the field of
+          engineering. With practical experience in electrical installation,
+          website development, and teaching, Alhassan combines both theoretical
+          knowledge and hands-on skills. His multidisciplinary expertise allows
+          him to bridge the gap between electrical engineering and modern
+          digital technology, positioning him as a versatile and
+          forward-thinking young professional. He is committed to excellence,
+          teamwork, and continuous learning, with a vision to contribute
+          significantly to the development of Sierra Leone’s engineering and
+          technology sector.<br />
+        </p>
+        <button style="padding: 10px">Read More</button>
+      </div>
+    </div>
   </body>
 </html>
