--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,25 @@
       </nav>
     </header>
     <h1>contact page</h1>
+    <div class="contact_section">
+      <h1 class="heading_1">Contact me</h1>
+      <div class="contact_container">
+        <div class="contact_img">
+          <img
+            src="WhatsApp Image 2025-10-09 at 09.56.17_83cd7d71.jpg"
+            alt=""
+          />
+        </div>
+        <div class="forms">
+          <form action="">
+            <input type="text" placeholder="name" /><br />
+            <input type="email" placeholder="email" /><br />
+            <input type="text" placeholder="phone number" /><br />
+            <textarea name="" id="" placeholder="message"></textarea><br />
+            <input type="button" value="submit" class="submit_button" />
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
