--- a/service.html
+++ b/service.html
@@ -21,5 +21,48 @@
       </nav>
     </header>
     <h1>service page</h1>
+    <div class="service">
+      <h1 class="heading_1">my servicr</h1>
+      <div class="boxes">
+        <div class="box" style="border-color: gold">
+          <img src="fuel.jpg" alt="" width="30px" height="30px" />
+          <h2>fuel</h2>
+          <p>
+            Petrol, diesel, and bottled water from your chosen filling station.
+          </p>
+        </div>
+        <div class="box" style="border-color: gold">
+          <img src="groc2.jpg" alt="" width="30px" height="30px" />
+          <h2>Groceries</h2>
+          <p>
+            Vegetables, onions, salad greens, eggs, wines, all kind of drinks,
+            milk, biscuits, yogurts, dairy, butter, meats, etc.
+          </p>
+        </div>
+        <div class="box" style="border-color: gold">
+          <img src="phar 2.jpg" alt="" height="30px" width="30px" />
+          <h2>Pharmacy</h2>
+          <p>
+            Prescription and over-the-counter medications from your designated
+            pharmacy.
+          </p>
+        </div>
+        <div class="box" style="border-color: gold">
+          <img src="cooked food2.jpg" alt="" height="30px" width="30px" />
+          <h2>cooked Food</h2>
+          <p>Meals from your favorite restaurant or eatery.</p>
+        </div>
+        <div class="box" style="border-color: gold">
+          <img src="topup 2.jpg" alt="" height="30px" width="30px" />
+          <h2>Top-up</h2>
+          <p>Mobile airtime, EDSA, DSTV, and other utility top-up cards.</p>
+        </div>
+        <div class="box" style="border-color: gold">
+          <img src="rental-property.webp" alt="" height="30px" width="30px" />
+          <h2>Rental/Lease</h2>
+          <p>house, shop/store for rent/lease, car for hire, land to buy.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
